upated hosts.erb

--- a/cookbooks/hosts/templates/default/hosts.erb
+++ b/cookbooks/hosts/templates/default/hosts.erb
@@ -11,7 +11,7 @@
 <% end %>
 <% end %>
 
-<% if @node[:domain] == "t61.wooddog.net" %>
+<% if @node[:domain] == "wooddog.net" %>
 192.168.246.253 thing1.wooddog.net 
 192.168.246.254 thing2.wooddog.net 
 <% end %>
